[package]
name = "simdnbt"
version = "0.1.2"
edition = "2021"
description = "an unnecessarily fast nbt decoder"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
flate2 = "^1.0.27"
residua-mutf8 = "2.0.0"
thiserror = "1.0.47"

[dev-dependencies]
criterion = { version = "^0.5.1", features = ["html_reports"] }
graphite_binary = "0.1.0"
valence_nbt = { version = "0.6.1", features = ["binary"] }
fastnbt = "2.4.4"
azalea-nbt = { git = "https://github.com/mat-1/azalea" }
hematite-nbt = { version = "0.5.2", default-features = false }

[profile.release]
lto = true
debug = true

[profile.bench]
lto = true
debug = true

[[bench]]
harness = false
name = "nbt"

[[bench]]
harness = false
name = "compare"

[[bench]]
harness = false
name = "compare_realworld"

[[bench]]
harness = false
name = "mutf8"
