[package]
name = "simdnbt-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
simdnbt = { path = "../simdnbt" }

[[bin]]
name = "borrow_read"
path = "fuzz_targets/borrow_read.rs"
test = false
doc = false
bench = false

[[bin]]
name = "owned_write"
path = "fuzz_targets/owned_write.rs"
test = false
doc = false
bench = false
