[package]
name = "simdnbt"
version = "0.2.1"
edition = "2021"
description = "an unnecessarily fast nbt decoder"
license = "MIT"
repository = "https://github.com/mat-1/simdnbt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
flate2 = "^1.0.27"
residua-mutf8 = "2.0.0"
simdnbt-derive = { version = "0.2.0", path = "../simdnbt-derive", optional = true }
thiserror = "1.0.47"

[dev-dependencies]
criterion = { version = "^0.5.1", features = ["html_reports"] }
graphite_binary = "0.1.0"
valence_nbt = { version = "0.8.0", features = ["binary"] }
fastnbt = "2.4.4"
azalea-nbt = { git = "https://github.com/mat-1/azalea" }
hematite-nbt = { version = "0.5.2", default-features = false }

[features]
default = ["derive"]
derive = ["dep:simdnbt-derive"]

[profile.release]
lto = true
debug = false

[profile.bench]
lto = true
debug = false

[[bench]]
harness = false
name = "nbt"

[[bench]]
harness = false
name = "compare"

[[bench]]
harness = false
name = "compare_realworld"

[[bench]]
harness = false
name = "mutf8"
